# MorletX

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: _bots_guard.yml  ci.yml  dependabot_automerge.yml  dependabot_sweep.yml
assets/htmls/: basic_example.html
docs/: index.html
docs/assets/htmls/: basic_example.html
examples/data/: fin_whale_song.npz
examples/marimo_notebooks/: basic_example.py
src/morletx/: __init__.py  _core.py  core.py  plotting.py
src/morletx/utils/: array_utils.py
tests/: test_core.py
